// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`admin_console/team_channel_settings/channel/ChannelDetails should match snapshot 1`] = `
<div
  className="wrapper--fixed"
>
  <div
    className="admin-console__header with-back"
  >
    <div>
      <Connect(BlockableLink)
        className="fa fa-angle-left back"
        to="/admin_console/user_management/channels"
      />
      <FormattedMessage
        defaultMessage="Channel Configuration"
        id="admin.channel_settings.channel_detail.channel_configuration"
        values={Object {}}
      />
    </div>
  </div>
  <div
    className="admin-console__wrapper"
  >
    <div
      className="admin-console__content"
    >
      <ChannelProfile
        channel={
          Object {
            "group_constrained": false,
            "id": "123",
            "name": "DN",
            "team_name": "team",
            "type": "O",
          }
        }
        team={
          Object {
            "display_name": "test",
          }
        }
      />
      <ConvertConfirmModal
        displayName=""
        onCancel={[Function]}
        onConfirm={[Function]}
        show={false}
        toPublic={true}
      />
      <RemoveConfirmModal
        amount={0}
        inChannel={true}
        onCancel={[Function]}
        onConfirm={[Function]}
        show={false}
      />
      <ConvertAndRemoveConfirmModal
        displayName=""
        onCancel={[Function]}
        onConfirm={[Function]}
        removeAmount={0}
        show={false}
        toPublic={true}
      />
      <ChannelModes
        isPublic={true}
        isSynced={false}
        onToggle={[Function]}
      />
      <ChannelGroups
        channel={
          Object {
            "group_constrained": false,
            "id": "123",
            "name": "DN",
            "team_name": "team",
            "type": "O",
          }
        }
        groups={
          Array [
            Object {
              "display_name": "DN",
              "id": "123",
              "member_count": 3,
            },
          ]
        }
        onAddCallback={[Function]}
        onGroupRemoved={[Function]}
        removedGroups={Array []}
        synced={false}
        totalGroups={1}
      />
    </div>
  </div>
  <SaveChangesPanel
    cancelLink="/admin_console/user_management/channels"
    onClick={[Function]}
    saveNeeded={false}
    saving={false}
    serverError={null}
  />
</div>
`;

exports[`admin_console/team_channel_settings/channel/ChannelDetails should match snapshot 2`] = `
<div
  className="wrapper--fixed"
>
  <div
    className="admin-console__header with-back"
  >
    <div>
      <Connect(BlockableLink)
        className="fa fa-angle-left back"
        to="/admin_console/user_management/channels"
      />
      <FormattedMessage
        defaultMessage="Channel Configuration"
        id="admin.channel_settings.channel_detail.channel_configuration"
        values={Object {}}
      />
    </div>
  </div>
  <div
    className="admin-console__wrapper"
  >
    <div
      className="admin-console__content"
    >
      <ChannelProfile
        channel={
          Object {
            "group_constrained": false,
            "id": "123",
            "name": "DN",
            "team_name": "team",
            "type": "O",
          }
        }
        team={Object {}}
      />
      <ConvertConfirmModal
        displayName=""
        onCancel={[Function]}
        onConfirm={[Function]}
        show={false}
        toPublic={true}
      />
      <RemoveConfirmModal
        amount={0}
        inChannel={true}
        onCancel={[Function]}
        onConfirm={[Function]}
        show={false}
      />
      <ConvertAndRemoveConfirmModal
        displayName=""
        onCancel={[Function]}
        onConfirm={[Function]}
        removeAmount={0}
        show={false}
        toPublic={true}
      />
      <ChannelModes
        isPublic={true}
        isSynced={false}
        onToggle={[Function]}
      />
      <ChannelGroups
        channel={
          Object {
            "group_constrained": false,
            "id": "123",
            "name": "DN",
            "team_name": "team",
            "type": "O",
          }
        }
        groups={
          Array [
            Object {
              "display_name": "DN",
              "id": "123",
              "member_count": 3,
            },
          ]
        }
        onAddCallback={[Function]}
        onGroupRemoved={[Function]}
        removedGroups={Array []}
        synced={false}
        totalGroups={1}
      />
    </div>
  </div>
  <SaveChangesPanel
    cancelLink="/admin_console/user_management/channels"
    onClick={[Function]}
    saveNeeded={false}
    saving={false}
    serverError={null}
  />
</div>
`;
